# AitorVulkanEngine

./: README.md
include/: app.h  avedevice.h  avepipeline.h  avewindow.h
shaders/: simple_shader.frag  simple_shader.vert
src/: CMakeLists.txt  app.cpp  avedevice.cpp  avepipeline.cpp  avewindow.cpp  compile.sh  main.cpp
